@@ -1,5 +1,5 @@
 #
-# "$Id: cupsd.conf.in,v 1.2.2.15 2004/07/02 04:51:45 mike Exp $"
+# "$Id: cupsd.conf.in,v 1.2.2.16 2004/08/19 12:46:28 mike Exp $"
 #
 #   Sample configuration file for the Common UNIX Printing System (CUPS)
 #   scheduler.
@@ -16,7 +16,7 @@
 #       Attn: CUPS Licensing Information
 #       Easy Software Products
 #       44141 Airport View Drive, Suite 204
-#       Hollywood, Maryland 20636-3142 USA
+#       Hollywood, Maryland 20636 USA
 #
 #       Voice: (301) 373-9600
 #       EMail: cups-info@cups.org
@@ -399,6 +399,10 @@ LogLevel info
 # NOTE: Unfortunately, most web browsers don't support TLS or HTTP Upgrades
 # for encryption.  If you want to support web-based encryption you'll
 # probably need to listen on port 443 (the "https" port...)
+#
+# NOTE 2: In order for the command-line and web interfaces to work, you
+# must have at least one Port or Listen line that allows access from the
+# local loopback address (localhost).
 #
 
 #Port 80
@@ -820,5 +824,5 @@ Allow From 127.0.0.1
 </Location>
 
 #
-# End of "$Id: cupsd.conf.in,v 1.2.2.15 2004/07/02 04:51:45 mike Exp $".
+# End of "$Id: cupsd.conf.in,v 1.2.2.16 2004/08/19 12:46:28 mike Exp $".
 #
