@@ -1,5 +1,5 @@
 .\"
-.\" "$Id: cupsd.conf.man,v 1.5.2.5 2004/07/02 04:51:45 mike Exp $"
+.\" "$Id: cupsd.conf.man,v 1.5.2.6 2004/08/19 12:46:28 mike Exp $"
 .\"
 .\"   cupsd.conf man page for the Common UNIX Printing System (CUPS).
 .\"
@@ -21,7 +21,7 @@
 .\"       EMail: cups-info@cups.org
 .\"         WWW: http://www.cups.org
 .\"
-.TH cupsd.conf 5 "Common UNIX Printing System" "1 July 2004" "Easy Software Products"
+.TH cupsd.conf 5 "Common UNIX Printing System" "18 August 2004" "Easy Software Products"
 .SH NAME
 cupsd.conf \- server configuration file for cups
 .SH DESCRIPTION
@@ -279,6 +279,11 @@ PrintcapGUI
 Specifies whether to generate option panel definition files on some
 operating systems.
 .TP 5
+ReloadTimeout
+.br
+Specifies the amount of time to wait for job completion before
+restarting the scheduler.
+.TP 5
 RemoteRoot
 .br
 Specifies the username that is associated with unauthenticated root
@@ -360,5 +365,5 @@ http://localhost:631/documentation.html
 .SH COPYRIGHT
 Copyright 1993-2004 by Easy Software Products, All Rights Reserved.
 .\"
-.\" End of "$Id: cupsd.conf.man,v 1.5.2.5 2004/07/02 04:51:45 mike Exp $".
+.\" End of "$Id: cupsd.conf.man,v 1.5.2.6 2004/08/19 12:46:28 mike Exp $".
 .\"
