@@ -1,5 +1,5 @@
 /*
- * "$Id: conf.c,v 1.77.2.59 2004/07/02 04:51:45 mike Exp $"
+ * "$Id: conf.c,v 1.77.2.60 2004/08/19 12:46:28 mike Exp $"
  *
  *   Configuration routines for the Common UNIX Printing System (CUPS).
  *
@@ -135,6 +135,7 @@ static var_t	variables[] =
   { "PreserveJobHistory",	&JobHistory,		VAR_BOOLEAN },
   { "Printcap",			&Printcap,		VAR_STRING },
   { "PrintcapGUI",		&PrintcapGUI,		VAR_STRING },
+  { "ReloadTimeout",		&ReloadTimeout,		VAR_INTEGER },
   { "RemoteRoot",		&RemoteRoot,		VAR_STRING },
   { "RequestRoot",		&RequestRoot,		VAR_STRING },
   { "RIPCache",			&RIPCache,		VAR_STRING },
@@ -388,6 +389,7 @@ ReadConfiguration(void)
   MaxLogSize          = 1024 * 1024;
   MaxPrinterHistory   = 10;
   MaxRequestSize      = 0;
+  ReloadTimeout	      = 60;
   RootCertDuration    = 300;
   RunAsUser           = FALSE;
   Timeout             = DEFAULT_TIMEOUT;
@@ -2910,5 +2912,5 @@ CDSAGetServerCerts(void)
 
 
 /*
- * End of "$Id: conf.c,v 1.77.2.59 2004/07/02 04:51:45 mike Exp $".
+ * End of "$Id: conf.c,v 1.77.2.60 2004/08/19 12:46:28 mike Exp $".
  */
